Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9021

MYSQLD SEGFAULTS WHEN BUILT USING --WITH-MAX-INDEXES=128

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.1.8
    • 10.1.9
    • Compiling, OTHER
    • None
    • 10.1.9-1, 10.1.9-2

    Attachments

      Activity

        Expanded nirbhay_c 's diff until it passes the tests: https://gist.github.com/spetrunia/53b07648a7bd7bf61800

        index_nr= MAX_KEY means "hash join is used". test_if_skip_sort_order used it in a context where it should have used "no key", for which it normally uses "-1".

        psergei Sergei Petrunia added a comment - Expanded nirbhay_c 's diff until it passes the tests: https://gist.github.com/spetrunia/53b07648a7bd7bf61800 index_nr= MAX_KEY means "hash join is used". test_if_skip_sort_order used it in a context where it should have used "no key", for which it normally uses "-1".

        (gdb) p sizeof(key_map)
          $1 = 48
         
        (gdb) p sizeof(ulonglong)
          $2 = 8

        So, 64-bit bitmap takes 8 bytes, 128-bit bitmap would take 16 bytes, 256 bit bitmap would take 32 bytes, and that
        1. would still be less than current size of 48 bytes.
        2. would not have a risk of not calling Bitmap::~Bitmap somewhere, and leaking memory

        On the other hand, solution that uses Bitmap<n> is already coded, while we would still need to code the in-place bitmaps.

        psergei Sergei Petrunia added a comment - (gdb) p sizeof(key_map) $1 = 48   (gdb) p sizeof(ulonglong) $2 = 8 So, 64-bit bitmap takes 8 bytes, 128-bit bitmap would take 16 bytes, 256 bit bitmap would take 32 bytes, and that 1. would still be less than current size of 48 bytes. 2. would not have a risk of not calling Bitmap::~Bitmap somewhere, and leaking memory On the other hand, solution that uses Bitmap<n> is already coded, while we would still need to code the in-place bitmaps.
        nirbhay_c Nirbhay Choubey (Inactive) added a comment - Patch : https://github.com/MariaDB/server/commit/0a03bd1f043861be5bafa5b0cdff72995fac61d5
        nirbhay_c Nirbhay Choubey (Inactive) added a comment - https://github.com/MariaDB/server/commit/7ec655850397a0edfcea8c1fd82650824297e564

        People

          nirbhay_c Nirbhay Choubey (Inactive)
          nirbhay_c Nirbhay Choubey (Inactive)
          Votes:
          18 Vote for this issue
          Watchers:
          12 Start watching this issue

          Dates

            Created:
            Updated:
            Resolved:

            Git Integration

              Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.