sql/table.cc
@@ -2617,6 +2617,7 @@ enum open_frm_error open_table_from_share(THD *thd, TABLE_SHARE *share,
   outparam->quick_keys.init();
   outparam->covering_keys.init();
   outparam->merge_keys.init();
+  outparam->intersect_keys.init();
   outparam->keys_in_use_for_query.init();
 
   /* Allocate handler */
